# remux

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  config.sample.toml
.github/workflows/: ci.yml
openspec/changes/add-mouse-support/: design.md  proposal.md  tasks.md
openspec/changes/add-mouse-support/specs/client-server/: spec.md
openspec/changes/add-mouse-support/specs/modal-input/: spec.md
openspec/changes/automatic-layout-modes/: design.md  proposal.md  tasks.md
openspec/changes/automatic-restore/: design.md  proposal.md  tasks.md
openspec/changes/command-palette/: design.md  proposal.md  tasks.md
openspec/changes/enable-theming/: design.md  proposal.md  tasks.md
openspec/changes/keybinding-commands/: design.md  proposal.md  tasks.md
openspec/changes/leader-key-modes/: design.md  proposal.md  tasks.md
openspec/changes/normal-mode-shortcuts/: design.md  proposal.md  tasks.md
openspec/changes/remux-terminal-multiplexer/: design.md  proposal.md  tasks.md
openspec/changes/search-mode/: design.md  proposal.md  tasks.md
openspec/changes/search-mode/specs/search-mode/: spec.md
openspec/changes/session-manager/: design.md  proposal.md  tasks.md
openspec/changes/tiling-layout-gaps/: design.md  proposal.md  tasks.md
src/: main.rs  protocol.rs  screen.rs
src/client/: command_palette.rs  editor.rs  input.rs  mod.rs  registry.rs  renderer.rs  session_manager.rs  terminal.rs  whichkey.rs
src/config/: keybindings.rs  mod.rs  theme.rs  watcher.rs
src/server/: compositor.rs  daemon.rs  layout.rs  mod.rs  persistence.rs  pty.rs  session.rs
(+35 files in other folders)
