[package]
name = "remux"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
vte = "0.13"
nix = { version = "0.29", features = ["term", "signal", "process", "fs"] }
libc = "0.2"
tokio = { version = "1", features = ["full"] }
interprocess = { version = "2.2", features = ["tokio"] }
crossbeam = "0.8"
cassowary = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
daemonize = "0.5"
unicode-width = "0.2"
anyhow = "1"
thiserror = "2"
dirs = "6"
log = "0.4"
env_logger = "0.11"
tempfile = "3"
base64 = "0.22"
notify = "7"
